--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       }
       #home-slider h1 span.emphasis {
         font-weight: 900;
-        color: hsl(var(--primary));
+        color: #F37021;
         opacity: 0;
         transition: all .8s cubic-bezier(0.215, 0.61, 0.355, 1) 1.2s;
         transform: translate3d(-20%, 0, 0);
@@ -378,7 +378,7 @@
         color: hsl(var(--foreground));
         width: 100%;
         max-width: 350px;
-        text-align: justify;
+        text-align: center;
         font-size: 1.2rem;
         font-weight: 500;
         opacity: 0;
@@ -1037,6 +1037,13 @@
         -ms-overflow-style: none; /* IE and Edge */
         -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
         touch-action: pan-x; /* Enable horizontal panning on touch devices */
+      }
+      
+      @media screen and (max-width: 768px) {
+        .popular-courses-horizontal-section .courses-scroll-container {
+          overflow-y: auto;
+          touch-action: pan-x pan-y; /* Enable both horizontal and vertical scrolling on mobile */
+        }
       }
 
       .popular-courses-horizontal-section .courses-scroll-container::-webkit-scrollbar {
