--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
         overscroll-behavior: contain;
       }
 
+      /* Hide all scrollbars */
+      * {
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* IE and Edge */
+      }
+
+      *::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, Opera */
+      }
+
       .lenis.lenis-stopped {
         overflow: hidden;
       }
