Fix mobile menu centering, remove filters from courses page, update course cards to match popular courses style with animations

--- a/index.html
+++ b/index.html
@@ -483,6 +483,9 @@
         min-height: 100vh;
         position: relative;
         overflow: hidden;
+        text-align: center;
+        margin: 0 auto;
+        max-width: 100%;
       }
       
       @media screen and (min-width: 640px) {
@@ -1263,6 +1266,260 @@
       .popular-courses-horizontal-section .course-register-btn:active {
         transform: translateY(0);
         box-shadow: 0 2px 10px hsl(var(--primary) / 0.4);
+      }
+
+      /* Course Cards Page Styles - Similar to Popular Courses */
+      .course-card-page {
+        flex-shrink: 0;
+        width: 100%;
+        height: auto;
+        min-height: 600px;
+      }
+
+      .course-card-inner-page {
+        display: flex;
+        flex-direction: column;
+        background: hsl(var(--card));
+        border-radius: 1.5rem;
+        overflow: hidden;
+        box-shadow: 0 25px 70px rgba(0, 0, 0, 0.5);
+        height: 100%;
+        position: relative;
+        transform-style: preserve-3d;
+        transition: transform 0.1s ease-out;
+        transform-origin: center center;
+        will-change: transform;
+        border: 3px solid hsl(var(--primary));
+        border-radius: 1.5rem;
+      }
+
+      /* Default rotation animation when not hovering */
+      @keyframes gentleRotatePage {
+        0% {
+          transform: perspective(1000px) rotateX(0deg) rotateY(0deg) translateZ(0px) scale3d(1, 1, 1);
+        }
+        25% {
+          transform: perspective(1000px) rotateX(2deg) rotateY(3deg) translateZ(-5px) scale3d(1.02, 1.02, 1.02);
+        }
+        50% {
+          transform: perspective(1000px) rotateX(0deg) rotateY(0deg) translateZ(0px) scale3d(1, 1, 1);
+        }
+        75% {
+          transform: perspective(1000px) rotateX(-2deg) rotateY(-3deg) translateZ(-5px) scale3d(1.02, 1.02, 1.02);
+        }
+        100% {
+          transform: perspective(1000px) rotateX(0deg) rotateY(0deg) translateZ(0px) scale3d(1, 1, 1);
+        }
+      }
+
+      .course-card-page:not(:hover) .course-card-inner-page {
+        animation: gentleRotatePage 8s ease-in-out infinite;
+      }
+
+      .course-card-page:hover .course-card-inner-page {
+        animation: none;
+      }
+
+      .course-image-wrapper-page {
+        width: 100%;
+        height: 320px;
+        overflow: hidden;
+        flex-shrink: 0;
+        position: relative;
+        z-index: 0;
+        border-radius: 1rem;
+      }
+
+      .course-image-page {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: saturate(50%) sepia(30%) hue-rotate(5deg) brightness(0.9);
+        transition: filter 0.3s ease;
+        user-select: none;
+        -webkit-user-drag: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        border-radius: 1rem;
+        cursor: pointer;
+      }
+
+      .course-card-page:hover .course-image-page {
+        filter: saturate(100%) sepia(0%) hue-rotate(0deg) brightness(1);
+      }
+
+      .course-text-content-page {
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        color: hsl(var(--foreground));
+        position: relative;
+        z-index: 0;
+      }
+
+      .course-title-page {
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-bottom: 0.75rem;
+        line-height: 1.3;
+        color: hsl(var(--foreground));
+      }
+
+      .course-description-page {
+        font-size: 0.9rem;
+        line-height: 1.6;
+        margin-bottom: 1rem;
+        color: hsl(var(--muted-foreground));
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+
+      .course-meta-page {
+        display: flex;
+        gap: 1rem;
+        margin-bottom: 1.25rem;
+        font-size: 0.85rem;
+        flex-wrap: wrap;
+      }
+
+      .course-type-page,
+      .course-date-page {
+        background: hsl(var(--primary) / 0.2);
+        backdrop-filter: blur(10px);
+        padding: 0.5rem 0.75rem;
+        border-radius: 0.5rem;
+        border: 1px solid hsl(var(--primary) / 0.3);
+      }
+
+      /* Course Cards Page Styles - Similar to Popular Courses */
+      .course-card-page {
+        flex-shrink: 0;
+        width: 100%;
+        height: auto;
+        min-height: 600px;
+      }
+
+      .course-card-inner-page {
+        display: flex;
+        flex-direction: column;
+        background: hsl(var(--card));
+        border-radius: 1.5rem;
+        overflow: hidden;
+        box-shadow: 0 25px 70px rgba(0, 0, 0, 0.5);
+        height: 100%;
+        position: relative;
+        transform-style: preserve-3d;
+        transition: transform 0.1s ease-out;
+        transform-origin: center center;
+        will-change: transform;
+        border: 3px solid hsl(var(--primary));
+        border-radius: 1.5rem;
+      }
+
+      /* Default rotation animation when not hovering */
+      @keyframes gentleRotatePage {
+        0% {
+          transform: perspective(1000px) rotateX(0deg) rotateY(0deg) translateZ(0px) scale3d(1, 1, 1);
+        }
+        25% {
+          transform: perspective(1000px) rotateX(2deg) rotateY(3deg) translateZ(-5px) scale3d(1.02, 1.02, 1.02);
+        }
+        50% {
+          transform: perspective(1000px) rotateX(0deg) rotateY(0deg) translateZ(0px) scale3d(1, 1, 1);
+        }
+        75% {
+          transform: perspective(1000px) rotateX(-2deg) rotateY(-3deg) translateZ(-5px) scale3d(1.02, 1.02, 1.02);
+        }
+        100% {
+          transform: perspective(1000px) rotateX(0deg) rotateY(0deg) translateZ(0px) scale3d(1, 1, 1);
+        }
+      }
+
+      .course-card-page:not(:hover) .course-card-inner-page {
+        animation: gentleRotatePage 8s ease-in-out infinite;
+      }
+
+      .course-card-page:hover .course-card-inner-page {
+        animation: none;
+      }
+
+      .course-image-wrapper-page {
+        width: 100%;
+        height: 320px;
+        overflow: hidden;
+        flex-shrink: 0;
+        position: relative;
+        z-index: 0;
+        border-radius: 1rem;
+      }
+
+      .course-image-page {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: saturate(50%) sepia(30%) hue-rotate(5deg) brightness(0.9);
+        transition: filter 0.3s ease;
+        user-select: none;
+        -webkit-user-drag: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        border-radius: 1rem;
+        cursor: pointer;
+      }
+
+      .course-card-page:hover .course-image-page {
+        filter: saturate(100%) sepia(0%) hue-rotate(0deg) brightness(1);
+      }
+
+      .course-text-content-page {
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        color: hsl(var(--foreground));
+        position: relative;
+        z-index: 0;
+      }
+
+      .course-title-page {
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-bottom: 0.75rem;
+        line-height: 1.3;
+        color: hsl(var(--foreground));
+      }
+
+      .course-description-page {
+        font-size: 0.9rem;
+        line-height: 1.6;
+        margin-bottom: 1rem;
+        color: hsl(var(--muted-foreground));
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+
+      .course-meta-page {
+        display: flex;
+        gap: 1rem;
+        margin-bottom: 1.25rem;
+        font-size: 0.85rem;
+        flex-wrap: wrap;
+      }
+
+      .course-type-page,
+      .course-date-page {
+        background: hsl(var(--primary) / 0.2);
+        backdrop-filter: blur(10px);
+        padding: 0.5rem 0.75rem;
+        border-radius: 0.5rem;
+        border: 1px solid hsl(var(--primary) / 0.3);
       }
 
       @media screen and (max-width: 768px) {
