--- a/index.html
+++ b/index.html
@@ -486,6 +486,14 @@
         text-align: center;
         margin: 0 auto;
         max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      
+      .news-page-container > * {
+        width: 100%;
+        max-width: 100%;
       }
       
       @media screen and (min-width: 640px) {
