--- a/index.html
+++ b/index.html
@@ -1901,7 +1901,7 @@
         font-weight: 700;
         margin-bottom: 0.75rem;
         line-height: 1.3;
-        color: hsl(var(--foreground));
+        color: #F37021;
       }
 
       .popular-courses-horizontal-section .course-description {
@@ -1924,7 +1924,7 @@
         flex-wrap: wrap;
       }
 
-      .popular-courses-horizontal-section .course-type,
+      .popular-courses-horizontal-section .course-price,
       .popular-courses-horizontal-section .course-date {
         background: hsl(var(--primary) / 0.2);
         backdrop-filter: blur(10px);
@@ -2040,7 +2040,7 @@
           margin-bottom: 0.75rem;
         }
         
-        .popular-courses-horizontal-section .course-type,
+        .popular-courses-horizontal-section .course-price,
         .popular-courses-horizontal-section .course-date {
           padding: 0.4rem 0.6rem;
         }
