--- a/index.html
+++ b/index.html
@@ -132,14 +132,70 @@
         overflow-x: hidden;
       }
 
-      /* Hide all scrollbars */
-      * {
-        scrollbar-width: none; /* Firefox */
-        -ms-overflow-style: none; /* IE and Edge */
+      /* Custom Scrollbar Styles - Classic and Elegant */
+      /* For Webkit browsers (Chrome, Safari, Edge) */
+      *::-webkit-scrollbar {
+        width: 14px;
+        height: 14px;
       }
 
-      *::-webkit-scrollbar {
-        display: none; /* Chrome, Safari, Opera */
+      *::-webkit-scrollbar-track {
+        background: hsl(var(--background));
+        border-left: 1px solid hsl(var(--border) / 0.5);
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      }
+
+      *::-webkit-scrollbar-thumb {
+        background: linear-gradient(
+          180deg,
+          hsl(var(--primary)) 0%,
+          hsl(var(--primary) / 0.85) 50%,
+          hsl(var(--primary) / 0.75) 100%
+        );
+        border-radius: 7px;
+        border: 2px solid hsl(var(--background));
+        box-shadow: 
+          0 2px 4px rgba(0, 0, 0, 0.2),
+          inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+      *::-webkit-scrollbar-thumb:hover {
+        background: linear-gradient(
+          180deg,
+          hsl(var(--primary)) 0%,
+          hsl(var(--primary) / 0.95) 50%,
+          hsl(var(--primary) / 0.85) 100%
+        );
+        box-shadow: 
+          0 3px 6px rgba(0, 0, 0, 0.3),
+          inset 0 1px 0 rgba(255, 255, 255, 0.15);
+        transform: scale(1.05);
+      }
+
+      *::-webkit-scrollbar-thumb:active {
+        background: hsl(var(--primary));
+        box-shadow: 
+          0 1px 2px rgba(0, 0, 0, 0.2),
+          inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        transform: scale(0.98);
+      }
+
+      *::-webkit-scrollbar-corner {
+        background: hsl(var(--background));
+        border-top: 1px solid hsl(var(--border) / 0.5);
+        border-left: 1px solid hsl(var(--border) / 0.5);
+      }
+
+      /* For Firefox */
+      * {
+        scrollbar-width: thin;
+        scrollbar-color: hsl(var(--primary)) hsl(var(--background));
+      }
+
+      /* For IE and Edge (legacy) */
+      * {
+        -ms-overflow-style: scrollbar;
       }
       
       body {
